<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay" />

    </android.support.design.widget.AppBarLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_gravity="center"
        android:gravity="center"
        android:text="@string/instructions"/>
    <RelativeLayout
        android:id="@+id/relative_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">
        <android.support.design.widget.TextInputLayout
            android:id="@+id/label_for_message_string"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:labelFor="@id/message_string">
            <EditText
                android:id="@+id/message_string"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/type_something"/>
        </android.support.design.widget.TextInputLayout>
        <LinearLayout
            android:id="@+id/container_buttons"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/label_for_message_string"
            android:orientation="horizontal"
            android:weightSum="0.9">
            <Button
                android:id="@+id/button_show_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/show_progress"
                android:layout_weight="0.3"/>
            <Button
                android:id="@+id/button_change_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/update_progress"
                android:layout_weight="0.3"/>
            <Button
                android:id="@+id/button_hide_progress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hide_progress"
                android:layout_weight="0.3"/>
        </LinearLayout>
        <mx.dev.materialprogress.MaterialProgress
            android:id="@+id/material_progress"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            app:message="Hello, MaterialProgress" />

    </RelativeLayout>



    <android.support.design.widget.FloatingActionButton
        android:id="@+id/show_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:useCompatPadding="true"
        android:layout_gravity="bottom|start"
        android:layout_margin="8dp"
        android:src="@drawable/ic_play_arrow_black_24dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/change_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:useCompatPadding="true"
        android:layout_gravity="bottom|center_horizontal"
        android:layout_margin="8dp"
        android:src="@drawable/ic_autorenew_black_24dp"
        />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/hide_progress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:fabSize="normal"
        app:useCompatPadding="true"
        android:layout_gravity="bottom|end"
        android:layout_margin="8dp"
        android:src="@drawable/ic_stop_black_24dp"
        />

</android.support.design.widget.CoordinatorLayout>